[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "classic-core"
version = "8.0.0"
description = "High-performance Rust core for CLASSIC Fallout 4 crash log analyzer"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "CLASSIC Development Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: System :: Logging",
    "Operating System :: Microsoft :: Windows",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=4.0",
    "black>=24.0",
    "ruff>=0.8",
    "mypy>=1.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "classic_core._rust"
strip = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "python/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "SIM", "RUF"]
ignore = ["E501"]  # Line length handled by formatter

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
