[package]
name = "classic-scanlog-py"
version = "8.0.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["CLASSIC Development Team"]
description = "Python bindings for classic-scanlog-core - High-performance log parsing"
repository = "https://github.com/evildarkarchon/CLASSIC-Fallout4"

[lib]
name = "classic_scanlog"
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 bindings
pyo3 = { workspace = true, features = ["extension-module"] }

# Core business logic (pure Rust - no PyO3)
classic-scanlog-core = { path = "../classic-scanlog-core" }

# CLASSIC shared utilities
classic-shared-core = { path = "../classic-shared-core" }
classic-shared-py = { path = "../classic-shared-py" }

# Database operations (for FormID analyzer)
classic-database-core = { path = "../classic-database-core" }

# Error handling (minimal for bindings)
anyhow = { workspace = true }

# Dependencies for regex patterns (needed by some wrappers)
regex = { workspace = true }
rayon = { workspace = true }

[profile.release]
# Inherits from workspace

[dev-dependencies]
tempfile = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module", "auto-initialize"] }

[lints.rust]
deprecated = "deny"
rust_2024_compatibility = "warn"
unsafe_code = "forbid"  # We don't use unsafe in CLASSIC
missing_docs = "warn"   # Encourage documentation