[package]
name = "classic-scanlog"
version = "8.0.0"
edition = "2021"
rust-version = "1.81"
authors = ["CLASSIC Development Team"]
description = "High-performance log parsing and analysis for CLASSIC"
repository = "https://github.com/evildarkarchon/CLASSIC-Fallout4"

[lib]
name = "classic_scanlog"
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 bindings
pyo3 = { workspace = true, features = ["extension-module"] }

# CLASSIC shared utilities
classic-shared = { path = "../classic-shared" }

# YAML operations (for data structures)
classic-yaml = { path = "../classic-yaml" }

# Parsing and pattern matching
regex = { workspace = true }
memchr = { workspace = true }
aho-corasick = { workspace = true }

# Parallel processing
rayon = { workspace = true }
crossbeam = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

# Caching and concurrency
dashmap = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
lru = { workspace = true }
linked-hash-map = { workspace = true }

# Database (for FormID analyzer)
rusqlite = { workspace = true }

# String optimization
string_cache = { workspace = true }
smartstring = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

[profile.release]
# Inherits from workspace
