[package]
name = "classic-shared-core"
version = "8.0.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["CLASSIC Development Team"]
description = "Pure Rust foundation utilities for CLASSIC - runtime, errors, and business logic"
repository = "https://github.com/evildarkarchon/CLASSIC-Fallout4"

[lib]
crate-type = ["rlib"]  # Pure Rust library only - NO Python extension

[dependencies]
# Async runtime (ONE RUNTIME RULE)
tokio = { workspace = true }
futures = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Performance and caching
once_cell = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
num_cpus = { workspace = true }

# String optimization
string_cache = { workspace = true }
smartstring = { workspace = true }
lasso = { workspace = true }

# Hashing
rustc-hash = { workspace = true }
xxhash-rust = { workspace = true }

# Logging
log = { workspace = true }

# GUI bridge (optional - only for Slint GUI applications)
slint = { workspace = true, optional = true }

[features]
# Enable AsyncBridge for Slint GUI applications
gui-bridge = ["slint"]

[lints.rust]
deprecated = "deny"
rust_2024_compatibility = "warn"
unsafe_code = "forbid"
missing_docs = "deny"
