[package]
name = "classic-config"
version = "8.0.0"
edition = "2021"
rust-version = "1.81"
authors = ["CLASSIC Development Team"]
description = "Rust-accelerated configuration loading for CLASSIC"
repository = "https://github.com/evildarkarchon/CLASSIC-Fallout4"

[lib]
name = "classic_config"
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 bindings
pyo3 = { workspace = true, features = ["extension-module"] }

# CLASSIC shared utilities (provides runtime)
classic-shared = { path = "../classic-shared" }

# Async runtime (for JoinSet and file I/O)
tokio = { workspace = true, features = ["full"] }

# YAML parsing
yaml-rust2 = { workspace = true }

[profile.release]
# Inherits from workspace
