[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "classic-config"
version = "8.0.0"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
description = "Rust-accelerated configuration loading for CLASSIC"

[tool.maturin]
module-name = "classic_config"
